# django-training

musicplatform/: RESULTS.md  conftest.py  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
musicplatform/albums/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
musicplatform/albums/migrations/: 0001_initial.py  0002_alter_album_artist.py  0003_alter_album_artist.py  0004_album_approved_alter_album_creation_time.py  0005_alter_album_approved.py  0006_remove_album_creation_time.py  0007_album_created_album_modified.py  0008_song.py  0009_alter_song_name.py  0010_alter_album_release_time.py
musicplatform/albums/tests/: test_endpoints.py  test_serializers.py
musicplatform/artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
musicplatform/artists/migrations/: 0001_initial.py
musicplatform/artists/tests/: test_endpoints.py
musicplatform/authentication/: serializers.py  urls.py  views.py
musicplatform/authentication/tests/: test_endpoints.py
musicplatform/musicplatform/: celery.py  settings.py  urls.py
musicplatform/musicplatform/static/css/: form_style.css
musicplatform/static/css/: form_style.css
musicplatform/templates/albums/: add_album.html
musicplatform/templates/artists/: add_artist.html  index.html
musicplatform/templates/users/: login.html  register.html
musicplatform/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
musicplatform/users/migrations/: 0001_initial.py
musicplatform/users/tests/: test_endpoints.py
