[tool.poetry]
name = "musicplatform"
version = "0.1.0"
description = ""
authors = ["mostafa1411 <mostafa.abdullah1411@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"
django-model-utils = "^4.2.0"
pillow = "^9.2.0"
django-imagekit = "^4.1.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
django-extensions = "^3.2.1"
django-rest-knox = "^4.2.0"
django-passwords = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
